--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.14.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
