--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.14.2",
+    "eslint": "^8.35.0",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
