--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/node": "^18.14.2",
     "eslint": "^8.35.0",
     "tsx": "^3.12.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.29.2"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
