--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.14.2",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.35.0",
     "supertest": "^6.3.3",
     "tsx": "^3.12.3",
